// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterForm: Component should render correctly 1`] = `
<Fragment>
  <Formik
    initialValues={
      Object {
        "field": "field",
        "fieldType": "string",
        "filterType": "checkbox",
        "name": "",
        "unique": "1",
      }
    }
    onSubmit={[Function]}
    validationSchema={
      ObjectSchema {
        "_blacklist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "_conditions": Array [],
        "_defaultDefault": [Function],
        "_deps": Array [],
        "_excludedEdges": Array [],
        "_exclusive": Object {},
        "_mutate": undefined,
        "_nodes": Array [
          "name",
        ],
        "_options": Object {
          "abortEarly": true,
          "recursive": true,
        },
        "_type": "object",
        "_typeError": [Function],
        "_whitelist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "fields": Object {
          "name": StringSchema {
            "_blacklist": RefSet {
              "list": Set {},
              "refs": Map {},
            },
            "_conditions": Array [],
            "_deps": Array [],
            "_exclusive": Object {
              "max": true,
              "min": true,
              "required": true,
              "trim": false,
            },
            "_mutate": undefined,
            "_options": Object {
              "abortEarly": true,
              "recursive": true,
            },
            "_type": "string",
            "_typeError": [Function],
            "_whitelist": RefSet {
              "list": Set {},
              "refs": Map {},
            },
            "tests": Array [
              [Function],
              [Function],
              [Function],
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
          },
        },
        "tests": Array [],
        "transforms": Array [
          [Function],
        ],
      }
    }
  >
    <Component />
  </Formik>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <MemoizedFormattedMessage
        defaultMessage="Are you sure you want to remove this filter?"
        id="shared.components.filterForm.removeTitle"
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="shared.components.filterForm.cancelRemoval"
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Confirm"
          id="shared.components.filterForm.confirmRemoval"
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</Fragment>
`;

exports[`FilterForm: Component should render create form 1`] = `
<ContextProvider
  value={
    Object {
      "dirty": false,
      "errors": Object {},
      "getFieldHelpers": [Function],
      "getFieldMeta": [Function],
      "getFieldProps": [Function],
      "handleBlur": [Function],
      "handleChange": [Function],
      "handleReset": [Function],
      "handleSubmit": [Function],
      "initialErrors": Object {},
      "initialStatus": undefined,
      "initialTouched": Object {},
      "initialValues": Object {
        "field": "field",
        "fieldType": "string",
        "filterType": "checkbox",
        "name": "",
        "unique": "1",
      },
      "isSubmitting": false,
      "isValid": true,
      "isValidating": false,
      "registerField": [Function],
      "resetForm": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFormikState": [Function],
      "setStatus": [Function],
      "setSubmitting": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "status": undefined,
      "submitCount": 0,
      "submitForm": [Function],
      "touched": Object {},
      "unregisterField": [Function],
      "validateField": [Function],
      "validateForm": [Function],
      "validateOnBlur": true,
      "validateOnChange": true,
      "validateOnMount": false,
      "values": Object {
        "field": "field",
        "fieldType": "string",
        "filterType": "checkbox",
        "name": "",
        "unique": "1",
      },
    }
  }
>
  <Styled(Form)>
    <TextInput
      autoWidth={false}
      checkOnlyErrors={false}
      errors={Object {}}
      fullWidth={true}
      getFieldHelpers={[Function]}
      getFieldMeta={[Function]}
      getFieldProps={[Function]}
      handleBlur={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialErrors={Object {}}
      initialTouched={Object {}}
      initialValues={
        Object {
          "field": "field",
          "fieldType": "string",
          "filterType": "checkbox",
          "name": "",
          "unique": "1",
        }
      }
      isEdit={true}
      isValidating={false}
      label={
        <Memo(FormattedMessage)
          defaultMessage="Filter Name"
          id="shared.components.filterForm.name"
        />
      }
      name="name"
      onChange={[Function]}
      registerField={[Function]}
      resetForm={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={0}
      submitForm={[Function]}
      touched={Object {}}
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      validateOnMount={false}
      value=""
    />
    <Memo()
      label={
        <Memo(FormattedMessage)
          defaultMessage="Field"
          id="shared.components.filterForm.field"
        />
      }
      name="field"
      onSelect={[Function]}
      options={
        Array [
          Object {
            "label": "field",
            "value": "field",
          },
        ]
      }
      value="field"
    />
    <Memo()
      label={
        <Memo(FormattedMessage)
          defaultMessage="Filter Type"
          id="shared.components.filterForm.filterType"
        />
      }
      name="filterType"
      onSelect={[Function]}
      options={
        Array [
          Object {
            "label": "checkbox",
            "value": "checkbox",
          },
        ]
      }
      value="checkbox"
    />
    <styled.div>
      <TextInput
        autoWidth={false}
        checkOnlyErrors={false}
        disabled={true}
        errors={Object {}}
        fullWidth={true}
        getFieldHelpers={[Function]}
        getFieldMeta={[Function]}
        getFieldProps={[Function]}
        handleBlur={[Function]}
        handleReset={[Function]}
        handleSubmit={[Function]}
        initialErrors={Object {}}
        initialTouched={Object {}}
        initialValues={
          Object {
            "field": "field",
            "fieldType": "string",
            "filterType": "checkbox",
            "name": "",
            "unique": "1",
          }
        }
        isEdit={false}
        isValidating={false}
        label={
          <Memo(FormattedMessage)
            defaultMessage="Field Type"
            id="shared.components.filterForm.fieldType"
          />
        }
        name="fieldType"
        onChange={[Function]}
        registerField={[Function]}
        resetForm={[Function]}
        setErrors={[Function]}
        setFieldError={[Function]}
        setFieldTouched={[Function]}
        setFormikState={[Function]}
        setStatus={[Function]}
        setSubmitting={[Function]}
        setTouched={[Function]}
        setValues={[Function]}
        submitCount={0}
        submitForm={[Function]}
        touched={Object {}}
        unregisterField={[Function]}
        validateField={[Function]}
        validateForm={[Function]}
        validateOnBlur={true}
        validateOnChange={true}
        validateOnMount={false}
        value="string"
      />
      <TextInput
        autoWidth={false}
        checkOnlyErrors={false}
        disabled={true}
        errors={Object {}}
        fullWidth={true}
        getFieldHelpers={[Function]}
        getFieldMeta={[Function]}
        getFieldProps={[Function]}
        handleBlur={[Function]}
        handleReset={[Function]}
        handleSubmit={[Function]}
        initialErrors={Object {}}
        initialTouched={Object {}}
        initialValues={
          Object {
            "field": "field",
            "fieldType": "string",
            "filterType": "checkbox",
            "name": "",
            "unique": "1",
          }
        }
        isEdit={false}
        isValidating={false}
        label={
          <Memo(FormattedMessage)
            defaultMessage="Unique items"
            id="shared.components.filterForm.unique"
          />
        }
        name="unique"
        onChange={[Function]}
        registerField={[Function]}
        resetForm={[Function]}
        setErrors={[Function]}
        setFieldError={[Function]}
        setFieldTouched={[Function]}
        setFormikState={[Function]}
        setStatus={[Function]}
        setSubmitting={[Function]}
        setTouched={[Function]}
        setValues={[Function]}
        submitCount={0}
        submitForm={[Function]}
        touched={Object {}}
        unregisterField={[Function]}
        validateField={[Function]}
        validateForm={[Function]}
        validateOnBlur={true}
        validateOnChange={true}
        validateOnMount={false}
        value="1"
      />
    </styled.div>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackLink
        to="/datasource/1/filters"
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="shared.components.filterForm.cancel"
        />
      </BackLink>
      <NextButton
        disabled={true}
        loading={false}
        type="submit"
      >
        <MemoizedFormattedMessage
          defaultMessage="Save"
          id="shared.components.filterForm.saveFilter"
        />
      </NextButton>
    </NavigationContainer>
  </Styled(Form)>
</ContextProvider>
`;

exports[`FilterForm: Component should render edit form 1`] = `
<ContextProvider
  value={
    Object {
      "dirty": false,
      "errors": Object {},
      "getFieldHelpers": [Function],
      "getFieldMeta": [Function],
      "getFieldProps": [Function],
      "handleBlur": [Function],
      "handleChange": [Function],
      "handleReset": [Function],
      "handleSubmit": [Function],
      "initialErrors": Object {},
      "initialStatus": undefined,
      "initialTouched": Object {},
      "initialValues": Object {
        "datasource": Object {
          "id": 1,
        },
        "field": "field",
        "fieldType": "string",
        "filterType": "checkbox",
        "id": 2,
        "name": "name",
        "unique": "1",
      },
      "isSubmitting": false,
      "isValid": true,
      "isValidating": false,
      "registerField": [Function],
      "resetForm": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFormikState": [Function],
      "setStatus": [Function],
      "setSubmitting": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "status": undefined,
      "submitCount": 0,
      "submitForm": [Function],
      "touched": Object {},
      "unregisterField": [Function],
      "validateField": [Function],
      "validateForm": [Function],
      "validateOnBlur": true,
      "validateOnChange": true,
      "validateOnMount": false,
      "values": Object {
        "datasource": Object {
          "id": 1,
        },
        "field": "field",
        "fieldType": "string",
        "filterType": "checkbox",
        "id": 2,
        "name": "name",
        "unique": "1",
      },
    }
  }
>
  <Styled(Form)>
    <TextInput
      autoWidth={false}
      checkOnlyErrors={false}
      errors={Object {}}
      fullWidth={true}
      getFieldHelpers={[Function]}
      getFieldMeta={[Function]}
      getFieldProps={[Function]}
      handleBlur={[Function]}
      handleReset={[Function]}
      handleSubmit={[Function]}
      initialErrors={Object {}}
      initialTouched={Object {}}
      initialValues={
        Object {
          "datasource": Object {
            "id": 1,
          },
          "field": "field",
          "fieldType": "string",
          "filterType": "checkbox",
          "id": 2,
          "name": "name",
          "unique": "1",
        }
      }
      isEdit={true}
      isValidating={false}
      label={
        <Memo(FormattedMessage)
          defaultMessage="Filter Name"
          id="shared.components.filterForm.name"
        />
      }
      name="name"
      onChange={[Function]}
      registerField={[Function]}
      resetForm={[Function]}
      setErrors={[Function]}
      setFieldError={[Function]}
      setFieldTouched={[Function]}
      setFormikState={[Function]}
      setStatus={[Function]}
      setSubmitting={[Function]}
      setTouched={[Function]}
      setValues={[Function]}
      submitCount={0}
      submitForm={[Function]}
      touched={Object {}}
      unregisterField={[Function]}
      validateField={[Function]}
      validateForm={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
      validateOnMount={false}
      value="name"
    />
    <Memo()
      label={
        <Memo(FormattedMessage)
          defaultMessage="Field"
          id="shared.components.filterForm.field"
        />
      }
      name="field"
      onSelect={[Function]}
      options={
        Array [
          Object {
            "label": "field",
            "value": "field",
          },
        ]
      }
      value="field"
    />
    <Memo()
      label={
        <Memo(FormattedMessage)
          defaultMessage="Filter Type"
          id="shared.components.filterForm.filterType"
        />
      }
      name="filterType"
      onSelect={[Function]}
      options={
        Array [
          Object {
            "label": "checkbox",
            "value": "checkbox",
          },
        ]
      }
      value="checkbox"
    />
    <styled.div>
      <TextInput
        autoWidth={false}
        checkOnlyErrors={false}
        disabled={true}
        errors={Object {}}
        fullWidth={true}
        getFieldHelpers={[Function]}
        getFieldMeta={[Function]}
        getFieldProps={[Function]}
        handleBlur={[Function]}
        handleReset={[Function]}
        handleSubmit={[Function]}
        initialErrors={Object {}}
        initialTouched={Object {}}
        initialValues={
          Object {
            "datasource": Object {
              "id": 1,
            },
            "field": "field",
            "fieldType": "string",
            "filterType": "checkbox",
            "id": 2,
            "name": "name",
            "unique": "1",
          }
        }
        isEdit={false}
        isValidating={false}
        label={
          <Memo(FormattedMessage)
            defaultMessage="Field Type"
            id="shared.components.filterForm.fieldType"
          />
        }
        name="fieldType"
        onChange={[Function]}
        registerField={[Function]}
        resetForm={[Function]}
        setErrors={[Function]}
        setFieldError={[Function]}
        setFieldTouched={[Function]}
        setFormikState={[Function]}
        setStatus={[Function]}
        setSubmitting={[Function]}
        setTouched={[Function]}
        setValues={[Function]}
        submitCount={0}
        submitForm={[Function]}
        touched={Object {}}
        unregisterField={[Function]}
        validateField={[Function]}
        validateForm={[Function]}
        validateOnBlur={true}
        validateOnChange={true}
        validateOnMount={false}
        value="string"
      />
      <TextInput
        autoWidth={false}
        checkOnlyErrors={false}
        disabled={true}
        errors={Object {}}
        fullWidth={true}
        getFieldHelpers={[Function]}
        getFieldMeta={[Function]}
        getFieldProps={[Function]}
        handleBlur={[Function]}
        handleReset={[Function]}
        handleSubmit={[Function]}
        initialErrors={Object {}}
        initialTouched={Object {}}
        initialValues={
          Object {
            "datasource": Object {
              "id": 1,
            },
            "field": "field",
            "fieldType": "string",
            "filterType": "checkbox",
            "id": 2,
            "name": "name",
            "unique": "1",
          }
        }
        isEdit={false}
        isValidating={false}
        label={
          <Memo(FormattedMessage)
            defaultMessage="Unique items"
            id="shared.components.filterForm.unique"
          />
        }
        name="unique"
        onChange={[Function]}
        registerField={[Function]}
        resetForm={[Function]}
        setErrors={[Function]}
        setFieldError={[Function]}
        setFieldTouched={[Function]}
        setFormikState={[Function]}
        setStatus={[Function]}
        setSubmitting={[Function]}
        setTouched={[Function]}
        setValues={[Function]}
        submitCount={0}
        submitForm={[Function]}
        touched={Object {}}
        unregisterField={[Function]}
        validateField={[Function]}
        validateForm={[Function]}
        validateOnBlur={true}
        validateOnChange={true}
        validateOnMount={false}
        value="1"
      />
    </styled.div>
    <styled.div>
      <Styled(Span)
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Remove filter"
          id="shared.components.filterForm.deleteFilter"
        />
      </Styled(Span)>
    </styled.div>
    <NavigationContainer
      contentStyles={null}
      fixed={true}
      hideOnDesktop={false}
      right={false}
    >
      <BackLink
        to="/datasource/1/filters"
      >
        <MemoizedFormattedMessage
          defaultMessage="Back"
          id="shared.components.filterForm.back"
        />
      </BackLink>
      <NextButton
        disabled={true}
        loading={false}
        type="submit"
      >
        <MemoizedFormattedMessage
          defaultMessage="Save"
          id="shared.components.filterForm.saveFilter"
        />
      </NextButton>
    </NavigationContainer>
  </Styled(Form)>
</ContextProvider>
`;
